refactor, circular queue change